--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,12 @@
 </head>
 <body>
 
+  <nav>
+    <%= link_to "Sign up", new_user_path %> |
+    <%= link_to "Log Out", sessions_path, method: :delete %> |
+    <%= link_to "Login", new_session_path %>
+  </nav>
+
 <%= yield %>
 
 </body>
