--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,15 @@
 <body>
 
   <nav>
-    <%= link_to "Sign up", new_user_path %> |
-    <%= link_to "Log Out", sessions_path, method: :delete %> |
-    <%= link_to "Login", new_session_path %>
+
+    <% if user_signed_in? %>
+       <%= current_user.first_name %>|
+       <%= link_to "Logout", sessions_path, method: :delete%>
+    <% else %>
+      <%= link_to "Sign up", new_user_path %> |
+      <%= link_to "Login", new_session_path %>
+    <% end %>
+
   </nav>
 
 <%= yield %>
