--- a/app/views/simple_calendar/_month_calendar.html.erb
+++ b/app/views/simple_calendar/_month_calendar.html.erb
@@ -3,7 +3,7 @@
   <%= I18n.t("date.month_names")[start_date.month] %> <%= start_date.year %>
   <%= link_to "NEXT", start_date: date_range.last + 1.day  %>
 
-  <table class="table">
+  <table class="table table-bordered">
     <thead>
       <tr>
         <% date_range.slice(0, 7).each do |day| %>
