--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,37 +1,20 @@
 <h3 class="container">Project </h3>
 
+
 <div class="container well">
 
-  <div class="col-md-4"><h5>Project Name</h5><strong><%= @project.name %></strong></div>
-  <div class="col-md-4"><h5>Shoot Date</h5><strong><%= @project.shoot_date %></strong></div>
-  <div class="col-md-4"><h5>Location</h5><strong>Downtown Vancouver</strong></div>
+  <div class="col-md-4"><h5 class="ui header">Project Name</h5><%= @project.name %></div>
+  <div class="col-md-4"><h5 class="ui header">Shoot Date</h5><%= @project.shoot_date %></div>
+  <div class="col-md-4"><h5 class="ui header">Casting Company</h5><%= @project.user.first_name.capitalize %></div>
   <br>
   <br>
   <br>
-  <div class="container"><h5>Description</h5><strong><%= @project.description %></strong></div>
+  <div class="container"><h5>Description</h5><%= @project.description %></div>
   <hr>
   <br>
   <br>
   <div class="col-md-3">
 
-    <div class="ui card">
-      <div class="image">
-        <%= image_tag "eu.png" %>
-      </div>
-      <div class="content">
-        <a class="header">Daniel Duarte</a>
-        <div class="meta">
-          <span class="date">Inspirational</span>
-        </div>
-      </div>
-      <div class="extra content">
-          <div class="ui two buttons">
-            <div class="ui basic green button">Approve</div>
-            <div class="ui basic red button">Decline</div>
-        </div>
-      </div>
-    </div>
-
   </div>
   <div class="col-md-3">
     <div class="ui card">
@@ -46,8 +29,7 @@
       </div>
       <div class="extra content">
           <div class="ui two buttons">
-            <div class="ui basic green button">Approve</div>
-            <div class="ui basic red button">Decline</div>
+            <div class="fluid ui yellow button">Hold on</div>
         </div>
       </div>
     </div>
@@ -67,8 +49,7 @@
       </div>
       <div class="extra content">
           <div class="ui two buttons">
-            <div class="ui basic green button">Approve</div>
-            <div class="ui basic red button">Decline</div>
+            <div class="fluid ui red button">Booked</div>
         </div>
       </div>
     </div>
@@ -94,7 +75,12 @@
       </div>
     </div>
   </div>
-
-
 
 </div>
+
+
+
+<br>
+<br>
+<br>
+<br>
