--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,29 +5,16 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <!-- <script src="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/js/bootstrap.js"></script> -->
   <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
   <script src="semantic/dist/semantic.min.js"></script>
 </head>
 <body>
 
-<nav class="nav navbar-inverse">
-  <div class="container-fluid">
 
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <% if user_signed_in? %>
-           <li><%= current_user.first_name %></li>
-           <li><%= link_to "Logout", sessions_path, method: :delete%></li>
-           <li><%= link_to "Create a Project", new_project_path %></li>
-           <li><%= link_to "Calendars", calendars_path %></li>
-        <% else %>
-          <li><%= link_to "Sign up", new_user_path %></li>
-          <li><%= link_to "Login", new_session_path %></li>
-        <% end %>
-      </ul>
-    </div>
-  </div>
-</nav>
+<%= render "/layouts/nav" %>
 
 <%= render "/layouts/flash_messages" %>
 <%= yield %>
