--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -4,10 +4,10 @@
   <div class="ui form">
     <div class="field">
     <%= simple_form_for @project do |f| %>
-      <%= f.input :name, placeholder: "name code.." %>
+      <%= f.input :name %>
       <%= f.input :shoot_date %>
-      <%= f.input :description, hint: "Put details for the project" %>
-      <%= f.submit ({class: "btn btn-primary"}), rows: "5" %>
+      <%= f.input :description %>
+      <%= f.submit ({class: "positive ui button"}), rows: "5" %>
     </div>
     <% end %>
   </div>
