--- a/app/views/simple_calendar/_calendar.html.erb
+++ b/app/views/simple_calendar/_calendar.html.erb
@@ -1,9 +1,9 @@
-<div class="simple-calendar">
-  <%= link_to "Previous", start_date: date_range.first - 1.day  %>
-  <%= I18n.t("date.month_names")[start_date.month] %> <%= start_date.year %>
-  <%= link_to "Next", start_date: date_range.last + 1.day  %>
+<div class="text-center simple-calendar">
+  <%#= link_to "Previous", start_date: date_range.first - 1.day  %>
+  <%#= I18n.t("date.month_names")[start_date.month] %> <%#= start_date.year %>
+  <%#= link_to "Next", start_date: date_range.last + 1.day  %>
 
-  <table class="table">
+  <table class="table-simple">
     <thead>
       <tr>
         <% date_range.slice(0, 7).each do |day| %>
